# F4-BetterWeaponScrapping

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: BWSMenu.cpp  BWSMenu.h  BWS_RendererData.h  BenchScrapTypes.h  ExamineMenuBridge.cpp  ExamineMenuBridge.h  GamepadInput.cpp  GamepadInput.h  PCH.h  ScrapManager.cpp  ScrapManager.h  ScrapModManager.cpp  ScrapModManager.h  ScrapOverlay.cpp  ScrapOverlay.h  Settings.cpp  Settings.h  main.cpp
swf/: BWSExamineMenu.swf  build.ps1
swf/src/: BWSExamineMenu.as
